Fixed scrollbar overlapping navbar

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -9,13 +9,13 @@
   backdrop-filter: blur(3px);
   user-select: none;
   transition: height 0.5s;
-  z-index: 5;
 }
 
 .navbar-box {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   height: var(--header-size);
   margin-left: auto;
   margin-right: auto;
@@ -57,10 +57,11 @@
 .dropdown-navbar-icon {
   display: inline-flex;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.5em 1.1em 0.5em 0.5em;
   border-radius: 0.375rem;
   align-items: center;
   justify-content: right;
+  height: 100%;
   width: 100%;
 }
 
